oxiplate-derive/tests/broken/unicode-escape-span.stderr
error: Expected an expression.
 --> tests/broken/unicode-escape-span.rs:4:37
  |
4 | #[oxiplate_inline = "hello\u{7FFF}{{"]
  |                                     ^
